fixed padding and overflow issue with video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap');
 
+
+
+
+
 .body {
     overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
@@ -95,8 +99,25 @@
 }
 
 
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/*------------------ Video --------------*/
 
 
+.embed-responsive-16by9::before {
+     padding-top: 100px; 
+}
 
 /*------------------ Contact--------------*/
 
@@ -105,3 +126,5 @@
     position: relative;
     
 }
+
+
